[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/fonts/STXINWEI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://art/temp/PauseWindow/item_rect.png" type="Texture" id=2]
[ext_resource path="res://art/temp/OverworldUIs/HealthBar/HealthBar_empty.png" type="Texture" id=3]
[ext_resource path="res://art/temp/OverworldUIs/HealthBar/HealthBar_bg.png" type="Texture" id=4]
[ext_resource path="res://creatures/player/PlayerSprites.tres" type="SpriteFrames" id=5]
[ext_resource path="res://art/temp/OverworldUIs/HealthBar/HealthBar_fill.png" type="Texture" id=6]
[ext_resource path="res://global/PauseWindow/BackPack/UserMiniInfo.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
font_data = ExtResource( 1 )

[node name="User" type="Area2D"]
collision_layer = 524288
collision_mask = 0
script = ExtResource( 7 )

[node name="Border" type="Sprite" parent="."]
scale = Vector2( 1.266, 1.22 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 5 )
animation = "info"

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -43.0
margin_top = 33.0
margin_right = 100.0
margin_bottom = 52.0
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="HealthBar"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -3, -3 )

[node name="HealthValue" type="Label" parent="HealthBar"]
margin_left = -12.0
margin_right = 153.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "100/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_User_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_User_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_User_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_User_mouse_exited"]
